--- a/portifolio3/css/_animations.scss
+++ b/portifolio3/css/_animations.scss
@@ -6,3 +6,9 @@
 .opacity-normal {
   animation: opacity-normal 2s ease forwards;
 }
+
+
+.logo_alef_animation {
+
+  animation: logo-alef 2s ease forwards;
+}
