--- a/portifolio3/css/_keyframes.scss
+++ b/portifolio3/css/_keyframes.scss
@@ -8,6 +8,16 @@
   }
 }
 
+@keyframes animation-alfbt2 {
+  from {
+    transform: translateX(0vw)
+
+  }
+  to {
+    transform: translate(0vw, 0vh)
+  }
+}
+
 
 @keyframes opacity-normal {
   to {
