--- a/portifolio3/css/_animations.scss
+++ b/portifolio3/css/_animations.scss
@@ -3,6 +3,15 @@
   
 }
 
+.alfbt-animation2 { //Coloca o alfa no centro doalef-logo
+  //animation: animation-alfbt2 1.5s ease forwards;
+
+  left: 50%;
+  top: 20%;
+  transform: translate(-50%, -50%) scale(0.5)!important;
+  margin: 0px 0px -44px 94px;
+}
+
 .opacity-normal {
   animation: opacity-normal 2s ease forwards;
 }
