--- a/portifolio3/css/_animations.scss
+++ b/portifolio3/css/_animations.scss
@@ -4,12 +4,8 @@
 }
 
 .alfbt-animation2 { //Coloca o alfa no centro doalef-logo
-  //animation: animation-alfbt2 1.5s ease forwards;
+  animation: animation-alfbt2 1.5s ease forwards;
 
-  left: 50%;
-  top: 20%;
-  transform: translate(-50%, -50%) scale(0.48)!important;
-  margin: 0px 0px -44px 92px;
 }
 
 .opacity-normal {
