--- a/portifolio3/css/style.css
+++ b/portifolio3/css/style.css
@@ -8,11 +8,9 @@
   }
 }
 @keyframes animation-alfbt2 {
-  from {
-    transform: translateX(0vw);
-  }
   to {
-    transform: translate(0vw, 0vh);
+    transform: translate(-50%, -50%) scale(0.48) !important;
+    margin: 0px 0px -44px 92px;
   }
 }
 @keyframes opacity-normal {
@@ -30,10 +28,7 @@
 }
 
 .alfbt-animation2 {
-  left: 50%;
-  top: 20%;
-  transform: translate(-50%, -50%) scale(0.48) !important;
-  margin: 0px 0px -44px 92px;
+  animation: animation-alfbt2 1.5s ease forwards;
 }
 
 .opacity-normal {
