--- a/portifolio3/css/_keyframes.scss
+++ b/portifolio3/css/_keyframes.scss
@@ -50,3 +50,25 @@
     opacity: 0%;
   }
 }
+
+@keyframes marginLeft {
+  0% {
+    margin-left: 200%;
+  }
+
+  10% {
+    margin-left: 100%;
+  }
+  20% {
+    margin-left: 0%;
+  }
+  30% {
+    margin-left: -10%;
+  }
+  40% {
+    margin-left: 0%;
+  }
+  100% {
+    margin-left: 0%;
+  }
+}
