--- a/portifolio3/css/style.css
+++ b/portifolio3/css/style.css
@@ -271,4 +271,25 @@ p {
   font-size: 18px;
   color: white;
   font-weight: 700;
+}
+
+.introducao {
+  width: 100vw;
+  background-color: rgba(255, 255, 255, 0.151);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.introducao div {
+  padding: 2rem;
+}
+.introducao div h2 {
+  color: white;
+  margin-top: 1rem;
+}
+.introducao div p {
+  font-size: 14px;
+  color: white;
+  margin-bottom: 1rem;
 }/*# sourceMappingURL=style.css.map */
