--- a/portifolio3/css/style.css
+++ b/portifolio3/css/style.css
@@ -275,21 +275,30 @@ p {
 
 .introducao {
   width: 100vw;
-  background-color: rgba(255, 255, 255, 0.151);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 .introducao div {
-  padding: 2rem;
+  padding-bottom: 5rem;
+  margin-top: -6rem;
 }
 .introducao div h2 {
   color: white;
-  margin-top: 1rem;
 }
 .introducao div p {
   font-size: 14px;
   color: white;
   margin-bottom: 1rem;
+}
+.introducao img {
+  transform: scale(0.45);
+}
+
+.skills {
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(255, 255, 255, 0.144);
+  width: 100vw;
 }/*# sourceMappingURL=style.css.map */
