--- a/portifolio3/css/style.scss
+++ b/portifolio3/css/style.scss
@@ -215,17 +215,19 @@ p {
 
 .introducao {
     width: 100vw;
-    background-color: rgba(255, 255, 255, 0.151);
+    //background-color: rgba(255, 255, 255, 0.151);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 
     div {
-        padding: 2rem;
+        padding-bottom:5rem;
+
+        margin-top: -6rem;
         h2 {
             color: white;
-            margin-top: 1rem;
+            
         }
 
         p {
@@ -233,7 +235,20 @@ p {
             color: white;
             margin-bottom: 1rem;
         }
-    }   
+    } 
 
+    img {
+        transform: scale(0.45);
+    }
     
+}
+
+
+//skills
+
+.skills {
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(255, 255, 255, 0.144);
+    width: 100vw;
 }
