--- a/portifolio3/css/style.css
+++ b/portifolio3/css/style.css
@@ -296,9 +296,17 @@ p {
   transform: scale(0.45);
 }
 
-.skills {
+li {
+  list-style-type: none;
+  text-align: center;
+  color: white;
+}
+li img {
+  transform: scale(0.8);
+}
+
+.skills ul div {
   display: flex;
-  flex-direction: column;
   background-color: rgba(255, 255, 255, 0.144);
   width: 100vw;
 }/*# sourceMappingURL=style.css.map */
