--- a/portifolio3/css/style.scss
+++ b/portifolio3/css/style.scss
@@ -246,9 +246,20 @@ p {
 
 //skills
 
-.skills {
+
+li {
+    list-style-type: none;
+    text-align: center;
+    color: white;
+    img {
+        transform: scale(0.8);
+    }
+}
+.skills ul div{
     display: flex;
-    flex-direction: column;
+    
     background-color: rgba(255, 255, 255, 0.144);
     width: 100vw;
+    
+
 }
