--- a/portifolio3/css/style.css
+++ b/portifolio3/css/style.css
@@ -275,6 +275,7 @@ p {
 
 .introducao {
   width: 100vw;
+  background: linear-gradient(to bottom, #334A80, #1242B3);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -296,17 +297,81 @@ p {
   transform: scale(0.45);
 }
 
+.skills {
+  text-align: center;
+  border-top: 2px solid #0A2666;
+  padding-top: 20px;
+  color: white;
+  background: linear-gradient(to top, #1242B3, #334A80);
+}
+
+.skills ul div {
+  display: flex;
+  margin-top: 5px;
+  width: 100vw;
+}
+
 li {
   list-style-type: none;
   text-align: center;
-  color: white;
 }
 li img {
   transform: scale(0.8);
 }
 
-.skills ul div {
-  display: flex;
-  background-color: rgba(255, 255, 255, 0.144);
+.o-que-faco {
   width: 100vw;
+  text-align: center;
+  color: white;
+}
+.o-que-faco p {
+  text-align: center;
+}
+
+#portfolio {
+  padding-top: 2rem;
+  border-top: 2px solid #0A2666;
+}
+#portfolio h2 {
+  color: white;
+  font-size: 2rem;
+  font-weight: 700;
+}
+#portfolio p {
+  color: rgba(255, 255, 255, 0.849);
+  padding-top: 1rem;
+  font-size: 1rem;
+}
+
+.portfolio {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem;
+  font-family: sans-serif;
+}
+.portfolio .number1, .portfolio .number2, .portfolio .number3, .portfolio .number4 {
+  height: 200px;
+  width: 350px;
+  background-color: white;
+  border-radius: 10px;
+  margin-bottom: 2rem;
+  box-shadow: 0px 0px 12px 1px rgba(0, 0, 0, 0.39);
+  color: rgba(255, 255, 255, 0.568);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.portfolio .number1 {
+  background-color: #59595B;
+}
+.portfolio .number2 {
+  background-color: #3F3E3C;
+}
+.portfolio .number3 {
+  background-color: #1E1F23;
+}
+.portfolio .number4 {
+  background-color: #0D0D0D;
 }/*# sourceMappingURL=style.css.map */
