--- a/portifolio3/css/style.scss
+++ b/portifolio3/css/style.scss
@@ -74,7 +74,7 @@ header {
     display: block;
     color: white;
     text-decoration: none;
-    font-size: 13px;
+    font-size: 0.9rem;
     padding: 12px;
     margin-left: 7px;
     
@@ -257,16 +257,22 @@ p {
 .skills ul div{
     display: flex;
     margin-top: 5px;
-    
+    align-items: center;
+    justify-content: space-around;
     width: 100vw;
     
 
 }
 
+
+
+
 li {
     list-style-type: none;
-    text-align: center;
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
     img {
         transform: scale(0.8);
     }
@@ -298,6 +304,10 @@ li {
         padding-top: 1rem;
         font-size: 1rem;
     }
+
+    h2, p {
+        padding-left: 2rem;
+    }
 }
 
 
@@ -323,6 +333,8 @@ li {
         align-items: center;
         justify-content: center;
     }
+
+ 
 
     .number1 {
         background-color: $tseva1;
