--- a/portifolio3/css/style.css
+++ b/portifolio3/css/style.css
@@ -94,15 +94,19 @@
 * {
   padding: 0;
   margin: 0;
+  max-width: 97.735vw;
   box-sizing: border-box;
   border: none;
   font-family: inherit;
 }
 
+html {
+  width: 100vw;
+}
+
 body {
   width: 100vw;
   font-family: Helvetica, Arial, sans-serif;
-  overflow-x: hidden;
   background-image: linear-gradient(to top, #1242B3, #0A2666);
   background-attachment: fixed;
 }
