--- a/portifolio3/css/style.scss
+++ b/portifolio3/css/style.scss
@@ -8,16 +8,20 @@
 * {
     padding: 0;
     margin: 0;
+    max-width: 97.735vw;
     box-sizing: border-box;
     border: none;
     font-family: inherit;
 }
-
+html {
+    width: 100vw;
+}
 
 body {
     width: 100vw;
+
     font-family: Helvetica, Arial,  sans-serif;
-    overflow-x: hidden;
+    //overflow-x: hidden;
     background-image: linear-gradient(to top, $iom0, $iom2);
     background-attachment: fixed;
 }
